# gitserver

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
script/gitea/: init.sh  migrate.sh
script/jenkins/: install-plugins.sh
src/: cli.rs  config.rs  helper.rs  main.rs
src/construct/: gitea.rs  ingress.rs  jenkins.rs  local_dir_volume.rs  local_dir_volume_claim.rs  local_volume.rs  local_volume_claim.rs  memcached.rs  mod.rs  postgres.rs
