[package]
name = "gitserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
derive_builder = "0.12.0"
nom = "7.1.3"
signal-hook = "0.3.15"
tf-bindgen = { git = "https://github.com/robert-oleynik/tf-bindgen.git", version = "0.1.0" }
tf-kubernetes = { git = "https://github.com/robert-oleynik/tf-kubernetes.git", version = "0.1.0" }
